--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				        <span class="icon-bar"></span>
 				      </button>
               <div class="brand">
-              <img src="img/new5.png" class="img-responsive" style="width: 120px; margin-top: -16px;"></a>
+              <img src="./logo.png" class="img-responsive" style="width: 120px; margin-top: -16px;"></a>
             </div>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
@@ -142,7 +142,7 @@
         <div class="row">
           <div class="banner-info">
             <div class="banner-logo text-center">
-              <img src="logo.png" class="img-responsive" style="width: 140px;">
+              <img src="./img/logono.png" class="img-responsive" style="width: 120px;">
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Healthcare at your desk!!</h1>
