--- a/faq.html
+++ b/faq.html
@@ -48,13 +48,9 @@
 					<li><strong>Pain</strong>
 						<p>Common aches and pains in the body are pretty common. However, significant pain
 						   in the body for an extended period of time requires to be referred to a physician.
-						   The doctor can help in diagnosing the root cause of the problem and treating it.</p>
-					</li>
-					<br />
-					<li><strong>Headaches</strong>	
-						<p>This is a common reason for which people visit doctors. Headaches could be caused due to a variety of reasons.
-						   Frequent headaches could be caused due to migraines which require to be treated promptly as headaches can hamper daily life.</p>
-				    </li>
+						   <div class="header1">
+							<h1>Frequently Asked Questions</h1>
+						</div
 					<br />
 					<li><strong>Cough</strong>
 						<p>Coughs might be accompanied by cold or an irritation in the throat. It can be caused due to cold, pneumonia or other more serious factors like asthma etc.</p>
