--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
   <!--banner-->
   <section id="banner" class="banner">
-    <div class="bg-color">
+    <div class="bg-color" style="height: 600px;">
+      <img src="logo.png" style="width: 60%; height: 80%; padding-left: 30%; padding-top: 10%; padding-right: 5px;">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="col-md-12">
@@ -140,11 +141,13 @@
       </nav>
       <div class="container">
         <div >
-          <div class="banner-info">itext-center">
+        
+          <!-- <div class="banner-info">itext-center">
               <h1 class="white">Healthcare at your desk!!</h1>
               <p>This website is specially designed to help different peoples to classify their<br>respective disease and their concern doctors.</p>
               <div class="link">
-              <a href="https://symptoms.webmd.com/default.htm#/info">System Checker</a>
+              <a href="https://symptoms.webmd.com/default.htm#/info">System Checker</a> -->
+
               </div>
             </div>
            </div>
@@ -167,7 +170,7 @@
               <div class="icon">
                 <a href="https://www.example.com">
                   <!-- Utilisation de la balise <img> pour afficher l'image -->
-                  <img src="./img/file-lines-solid.svg" alt="Description de l'image">
+                  <a href="questionnaire.html"><img src="./img/file-lines-solid.svg" style="width: 35px; height: 45px; margin-bottom: 20px;"></a>
               </a>
               </div>
               <div class="icon-info" style="width: 300px; ;">
@@ -175,14 +178,14 @@
                 <p style="font-size: large;">We provide ready to go, AI guided questionnaires for patients to better diagnose early symptoms of allergies, allergic reactions, or intolerances after consumption of certain foods.<br /><br /> </p>
               </div>
             </div>
-                <div class="service-info" >
+                <div class="service-info" style="margin-top: 100px; padding-bottom: 100px;">
                   <div class="icon">
                     
-                    <a href="questionnaire.html"><img src="./img/eye-solid.svg" style="width: 35px; height: 45px; margin-bottom: 20px;"></a>
+                   <a href="https://symptoms.webmd.com/default.htm#/info"><image src="./img/user-doctor-solid.svg" style="width: 55px; height: 45px; margin-bottom: 7px;"></image></a>
                   </div>
                   <div class="icon-info">
-                    <h4>Emergency Services</h4>
-                    <p>Ambulance services in NSW are provided free of charge to concession card holders, including pensioners. NSW Ambulance also has a policy in place for patients who are under financial hardship and unable to pay for our services.24 hours patient transport vehicle available. Patients are transported from home (on campus) to IIT hospital and patients referred by emergency duty doctor to empanelled hospital for specialized care. </p>
+                    <h3>Consult a Specialist</h3>
+                    <p>Here you can acces the following website: https://symptoms.webmd.com/default.html/info ,where you can perform a quick auto diagnosis and check your symptoms, if any are present and bothering you. </p>
                   </div>
                 </div>
           </div>
@@ -192,19 +195,21 @@
                 <image src="./img/eye-solid.svg" style="width: 45px; height: 45px; margin-bottom: 20px;"></image>
               </div>
               <div class="icon-info">
-                <h4>AI Detector</h4>
+                <h3>AI Detector</h3>
                 <p>
-                Introducing a brand new method to help patients better choose their food and other edible products, we implemented a new AI 
+                Introducing a   brand new method to help patients better choose their food and other edible products, we implemented a new AI 
                 </p>
               </div>
             </div>
             <div class="service-info">
               <div class="icon">
-                <i class="fa fa-medkit"></i>
+                <image src="./img/output-onlinepngtools.png" style="width: 195px; height: 150px; margin-bottom:1px; padding-bottom: 1px; margin-top: 1px;"></image>
               </div>
               <div class="icon-info">
-                <h4>OPD</h4>
-                <p>Patients are registered at the reception and are seen on first come, first serve basis, however out of turn consultation may be provided in case of emergency and senior citizen. Patients have the right to consult any doctor. In OPD, clinical consultation is provided to patients which includes history taking, clinical examination, diagnosis and providing prescription to patients besides advising laboratory tests in some cases.</p>
+                <h3>AllerEats</h3>
+                <p>AllerEats is our brand new mobile phone that helps the community order their groceries at the comfort of their own home. Similar to UberEats, 
+                  our app offers new features like filtering products based on the allergies you have and other dietary preferences. Available now on iOs and Android.
+                </p>
               </div>
             </div>
           </div>
