--- a/questionnaire.html
+++ b/questionnaire.html
@@ -24,9 +24,9 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: rgb(48, 157, 174);">
 
-    <form style="padding-left: 1000px;padding-top: 100px;">
+    <form style="padding-left: 1000px;padding-top: 100px; padding-left: 650px;">
         <label for="foodProduct" style="font-size: x-large;">Food Product:</label>
         <input type="text" id="foodProduct" name="foodProduct" required style="width: 500px;">
 
@@ -45,11 +45,10 @@
         <label for="allergens" style="font-size: x-large;">Allergens:</label>
         <input type="text" id="allergens" name="allergens" required style="width: 500px;">
 
-        <label for="prediction" style="font-size: x-large;">Prediction:</label>
-        <input type="text" id="prediction" name="prediction" required style="width: 500px;">
+       
         <br>
 
-        <input type="submit" value="SUBMIT" style="width: 500px;" style="font-size: 100px;">
+        <input type="submit" value="predict" style="width: 500px;" style="font-size: 100px;">
     </form>
 
 </body>
